JWT authentication added
